Use registry.access.redhat.com/ubi9-init as a tools container in devfile.yaml

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -4,7 +4,7 @@ metadata:
 components:
   - name: tools
     container:
-      image: registry.access.redhat.com/ubi9-minimal
+      image: registry.access.redhat.com/ubi9-init
       args: ['tail', '-f', '/dev/null']
       endpoints:
         - exposure: public
